--- a/pod-definition.yaml
+++ b/pod-definition.yaml
@@ -3,9 +3,9 @@ kind: Pod
 metadata:
   labels:
     run: ubudesk
-  name: pod-ubu18-desk-powercli
+  name: ubudesk18-powercli
 spec:
   containers:
   - image: dorowu/ubuntu-desktop-lxde-vnc:bionic
-    name:pod-ubu18-desk-powercli
-    command: ['sh', '-c', 'apt-get update -y ; apt-get install git -y && git clone https://github.com/ivanruizalcuadrado/k8-ubu18-desk-powecli.git  && chmod -R 775 /root/k8-ubu18-desk-powecli/ && /root/k8-ubu18-desk-powecli/install-pwsh.sh &&sleep 3600']
+    name: ubudesk18-powercli
+    command: ['sh', '-c', 'ls && echo "hola" > hola.txt && apt-get update -y ; apt-get install git -y && git clone https://github.com/ivanruizalcuadrado/k8-ubu18-desk-powecli.git  && chmod -R 775 /root/k8-ubu18-desk-powecli/ && /root/k8-ubu18-desk-powecli/install-pwsh.sh &&sleep 3600']
